# salespyforce

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  ci-request.md  docs-request.md  feature-request.md  maintainer-bug.md  maintainer-chore.md  maintainer-ci.md  maintainer-docs.md  maintainer-feature.md  maintainer-refactor.md  maintainer-security.md  maintainer-task.md  maintainer-test.md  refactor-request.md  security-report.md  test-request.md
.github/encrypted/: helper_dm_conn.yml.gpg  helper_shurt.yml.gpg
.github/scripts/: decrypt_helper.sh  decrypt_helper_local.sh  encrypt_secret.sh
.github/workflows/: ci.yml  pythonpackage.yml
docs/: CHANGELOG.md  changelog.md  changelog.rst  conf.py  core-object-methods.rst  doc-redesign-notes.rst  index.md  index.rst  primary-modules.rst  readme.rst  requirements.txt  supporting-modules.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/getting-started/: index.rst  installation.md  overview.md  overview.rst  quickstart.md
docs/guides/: authentication.md  error-handling.md  index.rst  querying.md  testing.md
docs/reference/: client.rst  exceptions.rst  index.rst
docs_legacy/: ci.md  core-object-methods.rst  primary-modules.rst  requirements.txt  supporting-modules.rst
docs_wip/: README.md  conf.py
docs_wip/getting-started/: index.rst  installation.rst  quickstart.rst
docs_wip/guides/: authentication.rst  error-handling.rst  querying.rst
docs_wip/reference/: index.rst  utilities.rst
examples/: helper.yml
src/salespyforce/: __init__.py  api.py  chatter.py  constants.py  core.py  decorators.py  knowledge.py
src/salespyforce/errors/: __init__.py  exceptions.py  handlers.py
src/salespyforce/utils/: __init__.py  core_utils.py  helper.py  log_utils.py  version.py
src/salespyforce/utils/tests/: __init__.py  conftest.py  resources.py  test_core_utils.py  test_helper_utils.py  test_instantiate_object.py  test_log_utils.py  test_sobjects.py  test_soql.py  test_sosl.py  test_version_utils.py
tests/: __init__.py  conftest.py  resources.py  test_core_utils.py  test_helper_utils.py  test_instantiate_object.py  test_log_utils.py  test_sobjects.py  test_soql.py  test_sosl.py  test_version_utils.py
tests/integration/: README.md  __init__.py  test_connection.py
tests/unit/: __init__.py  resources.py  test_api.py  test_chatter.py  test_core_utils.py  test_exceptions.py  test_helper_utils.py  test_instantiate_object.py  test_knowledge.py  test_log_utils.py  test_sobjects.py  test_soql.py  test_sosl.py  test_version_utils.py
