[project]
name = "salespyforce"
version = "1.4.0.dev2"
description = "A Python toolset for performing Salesforce API calls"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = { file = "LICENSE" }
authors = [
    { name = "Jeff Shurtliff", email = "jeffshurtliff@gmail.com" }
]
keywords = ["salesforce", "sfdc", "api", "rest", "tooling", "python"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP"
]

dependencies = [
    "PyYAML>=6.0.3,<7",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/jeffshurtliff/salespyforce"
Repository = "https://github.com/jeffshurtliff/salespyforce"
Documentation = "https://salespyforce.readthedocs.io/en/latest/"
"Issue Tracker" = "https://github.com/jeffshurtliff/salespyforce/issues"

# --------------------------------------------------------------------
# Poetry-specific config
# --------------------------------------------------------------------
[tool.poetry]
packages = [
    { include = "salespyforce", from = "src" }
]

include = ["LICENSE", "README.md"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
bandit = { version = "^1.7.8", extras = ["sarif"] }
# Sphinx = "^7.0"
# sphinxcontrib-applehelp = ">=1.0.2"
# sphinxcontrib-devhelp = ">=1.0.2"
# sphinxcontrib-htmlhelp = ">=2.0.0"
# sphinxcontrib-jsmath = ">=1.0.1"
# sphinxcontrib-qthelp = ">=1.0.3"
# sphinxcontrib-serializinghtml = ">=1.1.4"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
