# --------------------------------------------------------------------
# Core Project Configuration
# --------------------------------------------------------------------
[project]
name = "salespyforce"
version = "1.5.0.dev0"
description = "A Python toolset for performing Salesforce API calls"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = { file = "LICENSE" }
authors = [
    { name = "Jeff Shurtliff", email = "jeffshurtliff@gmail.com" }
]
keywords = ["salesforce", "sfdc", "sfdx", "api", "rest", "tooling", "python"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP"
]

dependencies = [
    "PyYAML>=6.0.3,<7",
    "requests>=2.32.5",
    "urllib3>=1.26.19,<3",  # Explicit pin to avoid CVE-2024-37891
    "idna>=3.7,<4",         # Explicit pin to avoid CVE-2024-3651
    "certifi>=2024.7.4",    # Explicit pin to mitigate CA removals (e-Tugra, GLOBALTRUST)
]

[project.urls]
Homepage = "https://github.com/jeffshurtliff/salespyforce"
Repository = "https://github.com/jeffshurtliff/salespyforce"
Documentation = "https://salespyforce.readthedocs.io/en/stable/"
"Issue Tracker" = "https://github.com/jeffshurtliff/salespyforce/issues"

# --------------------------------------------------------------------
# Poetry-specific Configuration
# --------------------------------------------------------------------
[tool.poetry]
packages = [
    { include = "salespyforce", from = "src" }
]

include = ["LICENSE", "README.md"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
bandit = { version = "^1.7.8", extras = ["sarif"] }
Sphinx = "^7.4.7"
pydata-sphinx-theme = "^0.15.4"
myst-parser = "^3.0.1"
sphinx-favicon = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
