# --------------------------------------------------------------------
# Core Project Configuration
# --------------------------------------------------------------------
[project]
name = "salespyforce"
version = "1.5.0.dev0"
description = "A Python toolset for performing Salesforce API calls"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = { file = "LICENSE" }
authors = [
    { name = "Jeff Shurtliff", email = "jeffshurtliff@gmail.com" }
]
keywords = ["salesforce", "sfdc", "sfdx", "api", "rest", "tooling", "python"]

classifiers = [
    # Project maturity
    "Development Status :: 5 - Production/Stable",

    # License
    "License :: OSI Approved :: MIT License",
    "License :: Freely Distributable",

    # Intended audience and environment
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",

    # Supported Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PyYAML>=6.0.3,<7",
    "requests>=2.32.5",
    "urllib3>=1.26.19,<3",  # Explicit pin to avoid CVE-2024-37891
    "idna>=3.7,<4",         # Explicit pin to avoid CVE-2024-3651
    "certifi>=2024.7.4",    # Explicit pin to mitigate CA removals (e-Tugra, GLOBALTRUST)

    # Backport of tomllib for Python < 3.11
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/jeffshurtliff/salespyforce"
Repository = "https://github.com/jeffshurtliff/salespyforce"
Documentation = "https://salespyforce.readthedocs.io/en/stable/"
Changelog = "https://salespyforce.readthedocs.io/en/latest/CHANGELOG.html"
"Issue Tracker" = "https://github.com/jeffshurtliff/salespyforce/issues"

# --------------------------------------------------------------------
# Poetry-specific Configuration
# --------------------------------------------------------------------
[tool.poetry]
packages = [
    { include = "salespyforce", from = "src" }
]

include = ["LICENSE", "README.md"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
bandit = { version = "^1.7.8", extras = ["sarif"] }
Sphinx = "^7.4.7"
pydata-sphinx-theme = "^0.15.4"
myst-parser = "^3.0.1"
sphinx-favicon = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
